<resources>
    <string name="app_name">kiddify</string>
    <string name="project_name">Kiddify</string>
    <string name="login_text">Log in</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="media_image_description">Media image</string>
    <string name="fullscreen_image_description">Fullscreen image</string>
    <string name="close_button_description">Close</string>
    <string name="back_button_description">Back</string>
    <string name="menu_button_description">Menu</string>
    <string name="add_media_description">Add new media</string>
    <string name="sort">Sort</string>
    <string name="calendar">Calendar</string>
    <string name="no_tasks">No tasks scheduled</string>
    <string name="load_earlier_tasks">Load earlier tasks</string>
    <string name="nav_home_description">Home icon</string>
    <string name="nav_calendar_description">Calendar icon</string>
    <string name="nav_gallery_description">Gallery icon</string>
    <string name="nav_profile_description">Profile icon</string>
    <string name="no_messages_info">No messages\nWrite something to start the conversation</string>
    <string name="type_a_message">Type a message...</string>
    <string name="send_btn_description">Send</string>
    <string name="gallery_title">Photo Gallery</string>
    <string name="no_photos_info">No photos yet</string>
    <string name="todays_tasks_ic">Today\'s tasks icon</string>
    <string name="today_s_tasks_txt">Today\'s Tasks</string>
    <string name="no_tasks_for_today">No tasks for today</string>
    <string name="suggestion_ic">Suggestion icon</string>
    <string name="suggestions">Suggestions</string>
    <string name="chat_text">Chat with\nfamily</string>
    <string name="chat_ic">Chat bubble icon</string>
    <string name="profile_title">Profile</string>
    <string name="name_tv">Name</string>
    <string name="birth_date_tv">Birth date</string>
    <string name="log_out_btn">Log out</string>
    <string name="tasks_suggestions_tv">Task\'s Suggestions</string>
    <string name="create_new_suggestion_tv">Create New Suggestion</string>
    <string name="task_title_input">Task Title</string>
    <string name="description_input">Description</string>
    <string name="start_date_input">Start date</string>
    <string name="end_date_input">End date</string>
    <string name="send_suggestion_btn">Send Suggestion</string>
    <string name="save_image_iv">Save image</string>
    <string name="delete_image_iv">Delete image</string>
    <string name="mark_as_done_btn">Mark as done</string>
    <string name="delete_ib">Delete</string>
</resources>